# pro-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildlinux.sh  buildwin.cmd  libs.cmake  poco.cmake
app/: CMakeLists.txt
client/: CMakeLists.txt
client/inc/: AsyncGreeterClient.h  GreeterClient.h  MsgProc.h
client/src/: AsyncGreeterClient.cxx  GreeterClient.cxx  main.cxx
ctest/: CMakeLists.txt
ctest/inc/: PocoTest.h
ctest/src/: PocoTest.cxx  main.cxx
dynamic/: CMakeLists.txt
dynamic/inc/: RequestHandler.h  dynamic.h
dynamic/src/: RequestHandler.cxx
grpc/helloworld/client/: CMakeLists.txt
grpc/helloworld/client/inc/: GreeterClient.h
grpc/helloworld/client/src/: AsyncGreeterClient.cxx  Main.cxx
grpc/helloworld/server/: CMakeLists.txt
grpc/helloworld/server/inc/: AsyncGreeterService.h
grpc/helloworld/server/src/: AsyncMain.cxx  GreeterService.cxx  Main.cxx
grpc/protos/app/: app.proto
grpc/protos/route/: route_guid.proto
grpc/routeguide/client/inc/: AsyncGreeterClient.h
grpc/routeguide/client/src/: AsyncMain.cxx  MsgProc.cxx
grpc/routeguide/server/inc/: GreeterService.h
grpc/routeguide/server/src/: AsyncGreeterService.cxx  GreeterService.cxx  Main.cxx  MsgProc.cxx
gui/: CMakeLists.txt
gui/form/: pro.ui
gui/inc/: gui.h
gui/src/: gui.cxx  main.cxx
protos/app/: app.proto
server/: CMakeLists.txt
server/inc/: GreeterService.h  MsgProc.h
server/src/: GreeterService.cxx  main.cxx
static/: CMakeLists.txt
static/inc/: ResponseHandler.h
static/src/: ResponseHandler.cxx
test/pocotest/: CMakeLists.txt
test/pocotest/inc/: PocoThreadTest.h
test/pocotest/src/: PocoThreadTest.cxx  main.cxx
utils/: CMakeLists.txt
utils/inc/: utils.h
utils/src/: utils.cxx
