CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pro-cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets")

ADD_SUBDIRECTORY(app)
ADD_SUBDIRECTORY(dynamic)
ADD_SUBDIRECTORY(static)
ADD_SUBDIRECTORY(utils)

INCLUDE(${CMAKE_SOURCE_DIR}/libs.cmake)