CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(pro-cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "_CMakePredefinedTargets")

INCLUDE(${CMAKE_SOURCE_DIR}/poco.cmake)
INCLUDE(${CMAKE_SOURCE_DIR}/libs.cmake)

ADD_SUBDIRECTORY(dynamic)
ADD_SUBDIRECTORY(static)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(gui)

IF(BUILD_GRPC)
	ADD_SUBDIRECTORY(grpc/helloworld/client)
	ADD_SUBDIRECTORY(grpc/helloworld/server)
ENDIF(BUILD_GRPC)