INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc
					${CMAKE_SOURCE_DIR}/util/inc
					${CMAKE_CURRENT_SOURCE_DIR}/src)
					
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)

FILE(GLOB INCS "inc/*.h")
FILE(GLOB HEADERS "src/*.h")
SOURCE_GROUP(Headers FILES ${INCS} ${HEADERS})

ADD_EXECUTABLE(app ${DIR_SRCS} ${HEADERS} ${INCS})
ADD_DEPENDENCIES(app static dynamic util)

SET_TARGET_PROPERTIES(app PROPERTIES FOLDER "App")

IF(CMAKE_SYSTEM_NAME MATCHES "Windows") 
	ADD_DEFINITIONS(/D"_WIN32_WINNT=0x601")
	TARGET_LINK_LIBRARIES(app static dynamic utils)
ELSE(CMAKE_SYSTEM_NAME MATCHES "Linux")
	# TARGET_LINK_LIBRARIES(app static dynamic utils)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
