INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc
					${CMAKE_SOURCE_DIR}/utils/inc
					${CMAKE_CURRENT_SOURCE_DIR}/src)
					
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)

FILE(GLOB INCS "inc/*.h")
FILE(GLOB HEADERS "src/*.h")
SOURCE_GROUP("Header Files" FILES ${INCS} ${HEADERS})

ADD_LIBRARY(static STATIC ${DIR_SRCS} ${HEADERS} ${INCS})

SET_TARGET_PROPERTIES(static PROPERTIES FOLDER "Library")

IF(CMAKE_SYSTEM_NAME MATCHES "Windows") 
	ADD_EXECUTABLE(static_test "tests/static_test.cxx")
	ADD_DEPENDENCIES(static_test static utils)
	TARGET_LINK_LIBRARIES(static_test static utils)
	SET_TARGET_PROPERTIES(static_test PROPERTIES FOLDER "Library")
ELSE(CMAKE_SYSTEM_NAME MATCHES "Linux")
	# TARGET_LINK_LIBRARIES(static_test static utils)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
