INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc
					${CMAKE_SOURCE_DIR}/util/inc
					${CMAKE_CURRENT_SOURCE_DIR}/src)
					
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src DIR_SRCS)

FILE(GLOB INCS "inc/*.h")
FILE(GLOB HEADERS "src/*.h")
SOURCE_GROUP(Headers FILES ${INCS} ${HEADERS})

ADD_LIBRARY(utils STATIC ${DIR_SRCS} ${HEADERS} ${INCS})

SET_TARGET_PROPERTIES(utils PROPERTIES FOLDER "Library")

IF(CMAKE_SYSTEM_NAME MATCHES "Windows") 
	ADD_EXECUTABLE(utils_test "tests/utils_test.cxx")
	TARGET_LINK_LIBRARIES(utils_test utils)
	SET_TARGET_PROPERTIES(utils_test PROPERTIES FOLDER "Library")
ELSE(CMAKE_SYSTEM_NAME MATCHES "Linux")
	# TARGET_LINK_LIBRARIES(utils_test utils)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
